--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,4 +18,6 @@ add_custom_command(
   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
 )
 
-add_executable(lab1 lex.yy.c cmm.tab.c main.c)
+aux_source_directory(. SRC)
+
+add_executable(lab1 ${SRC})
